--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="public/doggy.ico" />
+  <link rel="icon" type="image/svg+xml" href="/doggy.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="moksh" />
   <meta property="og:description" content="building a portfolio site using mern" />
