--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta property="og:description" content="building a portfolio site using mern" />
   <meta property="og:image" content="/screenshot.png" />
   <meta property="og:type" content="website" />
-  <!--   <meta property="og:url" content="will probably upload it on vercel" /> -->
+  <meta property="og:url" content="https://mo-dan.vercel.app/" />
 
   <title>moksh</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel=" preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
