fix: updated desc, and screenshot

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/doggy.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="moksh" />
-  <meta property="og:description" content="building a portfolio site using mern" />
+  <meta property="og:description" content="moksh dandotiya developer portfolio" />
   <meta property="og:image" content="/screenshot.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mo-dan.vercel.app/" />
